Document PPDG/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Days_till_1st_Decision__c</fullName>
        <formula>IF(ISBLANK(Credit_Decision_1_Date__c) ,   



CASE(MOD( datevalue(Received_by_credit__c) - DATE(1985,6,24),7), 
  0 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - datevalue(Received_by_credit__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - datevalue(Received_by_credit__c) )/7)*5)-1 ,

CASE(MOD( datevalue(Received_by_credit__c) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Credit_Decision_1_Date__c - datevalue(Received_by_credit__c) )/7)*5)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days till 1st Decision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Final_Decision__c</fullName>
        <formula>Latest_Final_Credit_Decision_Date__c - datevalue(Received_by_credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days till Final Decision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealFirstPaymentDate__c</fullName>
        <formula>TODAY() + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealFirstPaymentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Margin__c</fullName>
        <formula>IBB_Product__r.Profit_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>IBB_Product__r.EBS_Deal_Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dear_Customer__c</fullName>
        <label>Dear Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Current_Account_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Free withdrawals at any ATM displaying the Mastero Logo  and now view balance at most non-IBB ATMs. Cards expire every three years and will not be automatically renewed if there’s been a lack of use in the preceding year.  Replacement card charge is £1.65</inlineHelpText>
        <label>Debit Card (Current Account Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debit_Transaction_Code__c</fullName>
        <label>Debit Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Transaction_Narritive__c</fullName>
        <label>Debit Transaction Narritive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Consolidation_main_purpose__c</fullName>
        <label>Debt Consolidation main purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt_consolidation_greater_than_25__c</fullName>
        <label>Debt consolidation greater than 25</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Declaration_URL__c</fullName>
        <label>Declaration URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Outstanding__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Default Outstanding</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <formula>Purchase_price_market_value__c - Finance_Required__c</formula>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Funding_Comments__c</fullName>
        <description>This field can be used to provide comments on how the customer is going to fund the initial deposit for the account</description>
        <inlineHelpText>This field can be used to provide comments on how the customer is going to fund the initial deposit for the account</inlineHelpText>
        <label>Deposit Funding Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desktop_valuation_at_product_switch__c</fullName>
        <description>For use with product switching, to record the new property value as stated on the desktop valuation spread sheet.</description>
        <label>Desktop valuation at product switch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_debit_date_day__c</fullName>
        <label>Direct debit date/day</label>
        <picklist>
            <controllingField>Payment_Frequency__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discounted_fixed__c</fullName>
        <formula>TEXT (IBB_Product__r.Fixed_or_Discounted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted/fixed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_product_expiry_date__c</fullName>
        <description>For use with the offer letters</description>
        <formula>IBB_Product__r.Discounted_product_expiry_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_own_a_property__c</fullName>
        <description>Do you currently own a property which you owned for more than 12 months?</description>
        <label>Do you currently own a property?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBS_Account_ID__c</fullName>
        <label>EBS Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Account_Type__c</fullName>
        <formula>IBB_Product__r.EBS_Deal_Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Deal Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Currency__c</fullName>
        <formula>TEXT(IBB_Product__r.Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Deal Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Deal_Period_Code__c</fullName>
        <formula>IBB_Product__r.EBS_Deal_Period_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Deal Period Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibleIMAGE__c</fullName>
        <formula>IF( 
Eligible__c=&quot;No&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB7&quot;, &quot;Not Eligible&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB2&quot;, &quot;Eligible&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligibleimage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <formula>IsEligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed (ETYPE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife (ETYPH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time (ETYPL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self employed non-professional (ETYPN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self employed professional (ETYPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired (ETYPR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed (ETYPU)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ErrorContinueURL__c</fullName>
        <label>ErrorContinueURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_actual_monthly_rental_income__c</fullName>
        <description>What is the estimated/actual monthly rental income from the property?</description>
        <label>Estimated/actual monthly rental income?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Log_Count__c</fullName>
        <label>Event Log Count</label>
        <summaryForeignKey>EventLog__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ex_Pat__c</fullName>
        <description>For use with the production of an automated Ex Pat GCC special condition on the 2014 offer letter.</description>
        <inlineHelpText>An Ex Pat is a UK National living or working abroad.</inlineHelpText>
        <label>Ex Pat</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <inlineHelpText>To be completed by the HPP Seller when a eligibility has been returned as not eligible, but a BDM wishes to continue. This field can also be used to record why an eligible opportunity has been changed to an ineligible opportunity.</inlineHelpText>
        <label>Exception Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>Added to the system to track CPF exception case as per MG&apos;s request on 10/03/2015</description>
        <label>Exception?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execution_Only_Reason__c</fullName>
        <label>FF: Execution Only Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execution Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_ISA__c</fullName>
        <label>Existing ISA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_ISA_provider__c</fullName>
        <label>Existing ISA provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Money_Amount__c</fullName>
        <label>Existing Money Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_finance_amount__c</fullName>
        <label>Existing finance amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_security_value__c</fullName>
        <label>Existing security value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Breaches__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Expected Breaches</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Drawdown_Date__c</fullName>
        <description>For use with CPF 09/10/13 MGl: to record when drawdowns will occur for CPF record type.</description>
        <label>Expected Drawdown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_monthly_rent_payment__c</fullName>
        <label>Expected monthly rent payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_change__c</fullName>
        <label>FF: Expenditure change</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_date_of_fixed_product__c</fullName>
        <formula>IBB_Product__r.expiry_date_of_fixed_product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry date of fixed product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalWebsiteUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExternalWebsiteUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIT_Account_Number__c</fullName>
        <description>C0551</description>
        <label>FIT Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Account_Options_CAA_Rebuild__c</fullName>
        <formula>IF(text( Maturity_Paid_To__c ) = &apos;Existing Al Rayan Bank Account&apos;, Maturity_Existing_IBB_Account__c , Maturity_Bank_Account_Number__c &amp; &quot; &quot; &amp; &quot;Sort Code -&quot; &amp; &quot; &quot; &amp; Maturity_Bank_Sort_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Account Options CAA Rebuild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Account_Options_Old_CAA__c</fullName>
        <formula>IF(text(Profit_Paid_To__c) = &apos;Existing Al Rayan Bank Account&apos;, FTD_Existing_IBB_Account__c , Beneficiary_Bank_Account_Number__c &amp; &quot; &quot; &amp; &quot;Sort Code -&quot; &amp; &quot; &quot; &amp; Beneficiary_Bank_Sort_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Account Options Old CAA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Account_Options__c</fullName>
        <formula>IF( CAA_Rebuild__c = True, FTD_Account_Options_CAA_Rebuild__c , FTD_Account_Options_Old_CAA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Account Options Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Existing_IBB_Account__c</fullName>
        <inlineHelpText>Existing account where the profit will be paid if profits are being paid quarterly</inlineHelpText>
        <label>Al Rayan Bank account number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Maturity_Account__c</fullName>
        <formula>IF( Maturity_Bank_Account_Number__c = Null, Maturity_Existing_IBB_Account__c , Maturity_Bank_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Maturity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Profit_Account__c</fullName>
        <formula>IF( Beneficiary_Bank_Account_Number__c = Null, FTD_Existing_IBB_Account__c , Beneficiary_Bank_Account_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Profit Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Profit_Rate__c</fullName>
        <formula>IF( TEXT(Capitalise_Profit__c) = &apos;Reinvest in FTD&apos; , IBB_Product__r.Compounded_profit_rate__c , IBB_Product__r.Profit_rate_for_letter__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This picks up the latest rate from the linked product, internal use only, please do not use this to advise the customer as product rate may have been updated on the linked product since customers FTD was setup</inlineHelpText>
        <label>FTD Profit Rate - Internal use only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTD_Profit_Text__c</fullName>
        <formula>IF( TEXT(Capitalise_Profit__c) = &apos;Reinvest in FTD&apos; , &apos;(Annual equivalent)&apos; , Null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Profit Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTD_Reinvest_Text__c</fullName>
        <formula>IF( TEXT(Capitalise_Profit__c) = &apos;Reinvest in FTD&apos; , &apos;As you have chosen to reinvest your profit into your fixed term deposit account, the profit rate quoted is the annual equivalent expected profit rate that takes into account the compounding of your quarterly profit payments.&apos; , Null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTD Reinvest Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTI_Valid__c</fullName>
        <formula>FTI__c &lt;= IBB_Product__r.Maxiumum_FTI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTI Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTI__c</fullName>
        <formula>Finance_Required__c / PSD_Gross_Income__c</formula>
        <label>FTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTV_HTB_Reporting__c</fullName>
        <formula>Finance_Required__c / Purchase_price_market_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTV HTB Reporting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTV_Valid__c</fullName>
        <formula>OR(FTV__c &lt;= IBB_Product__r.Max_finance_to_value_FTV__c, (FTV__c &gt; IBB_Product__r.Max_finance_to_value_FTV__c &amp;&amp; Ignore_FTV_validation__c = true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTV Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTV__c</fullName>
        <formula>Finance_Required__c  /  Purchase_price_market_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTV %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facility_Maturity_Date__c</fullName>
        <label>Facility Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Assist__c</fullName>
        <formula>TEXT (IBB_Product__r.Valuation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Assist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Assisted__c</fullName>
        <formula>IF(IBB_Product__r.Fee_Assisted__c, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Assisted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Discounted__c</fullName>
        <formula>IF(ISPICKVAL(IBB_Product__r.Valuation_Type__c, &apos;Discounted&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Discounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_wording_offer_letter__c</fullName>
        <description>If the product is a BTL, this shows as &apos;product&apos; in the important notice section in the offer letter. For any other products, this shows as &apos;administration&apos;.</description>
        <formula>IF( text(Interested_in__c) = &quot;buy to let purchase plan&quot;, &apos;product&apos;, &apos;administration&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee wording offer letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Rating_Moody_s__c</fullName>
        <label>Final Rating (Moody&apos;s)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Period__c</fullName>
        <label>Finance Period (Years)?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Required__c</fullName>
        <label>Finance Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_account_submission_covenant__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Financial account submission covenant</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Subscription_This_Year__c</fullName>
        <label>First Subscription This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_time_buyer__c</fullName>
        <label>First time buyer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Possession_Cost__c</fullName>
        <label>Fixed Possession Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_product_expiry_date__c</fullName>
        <description>For use with offer letters</description>
        <formula>IBB_Product__r.Fixed_product_expiry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastToleranceDate__c</fullName>
        <description>The date after which open Opportunities will be omitted from Forecasts. This is linked the HPP Status of the Opportunity.</description>
        <inlineHelpText>The date after which open Opportunities will be omitted from Forecasts. This is linked the HPP Status of the Opportunity.</inlineHelpText>
        <label>Forecast Tolerance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name_of_Guarantor_2__c</fullName>
        <label>Full Name of Guarantor 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Product_type__c</fullName>
        <formula>IBB_Product__r.IBB_Product_Set__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_name_of_guarantor__c</fullName>
        <label>Full name of guarantor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Further_reports_required__c</fullName>
        <label>Further reports required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Content__c</fullName>
        <label>GA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Medium__c</fullName>
        <label>GA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Source__c</fullName>
        <label>GA Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Term__c</fullName>
        <label>GA Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Unique_ID__c</fullName>
        <label>GA Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_comments_box__c</fullName>
        <label>General comments box</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generate_Failed_eKYC_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Failed eKYC Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant1__c</fullName>
        <label>GrossAnnualIncomeApplicant1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant2__c</fullName>
        <label>GrossAnnualIncomeApplicant2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAnnualIncomeApplicant3__c</fullName>
        <label>GrossAnnualIncomeApplicant3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <inlineHelpText>If the customer is Self Employed then you MUST clarify and enter the NET Profit for the business for last 12 months accounts rather than the gross annual income/Gross profit.</inlineHelpText>
        <label>Gross Annual Income/Net profit Self Empl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_PCR_Covenant__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Gross PCR Covenant</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Rental_Income_GRI_Covenant__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Gross Rental Income (GRI) Covenant</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guarantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantor_property__c</fullName>
        <label>Guarantor property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPPP_Eligible__c</fullName>
        <formula>IsEligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPPP_Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPPP_eligible_image__c</fullName>
        <formula>IF( 
 HPPP_Eligible__c =&quot;No&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB7&quot;, &quot;Not Eligible&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB2&quot;, &quot;Eligible&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPPP_eligible_image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_APR__c</fullName>
        <formula>IBB_Product__r.Benchmark_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_CAA_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to close all opportunities pre MMR</description>
        <label>HPP CAA Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPP_Extended_ID__c</fullName>
        <formula>HPP_extended_opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Extended ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_MI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP MI</label>
        <referenceTo>HPP_MI__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_No_Of_Monthly_Payments__c</fullName>
        <formula>Term_of_Finance__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP No Of Monthly Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>